# shop-the-video

./: .coderabbit.yml  .env  .gitignore  Dockerfile  README.md  package-lock.json  pyproject.toml  start-services.sh  vygil.py
agent/: .env  agent.py  agent_manager.py  generic_agent.py  mcp_client.py
agent/config/: activity-tracking-agent.yaml  audio-analyzer-agent.yaml  focus-assistant-agent.yaml
api/: main.py
api/memory/: vygil-activity-tracker_memory.txt  vygil-focus-assistant_memory.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ActivityLog.jsx  ActivityTracker.jsx  AgentSelector.jsx  ControlPanel.jsx  Header.jsx  MetricsDisplay.jsx  NotificationSystem.jsx  PermissionNotification.jsx  ProductSidebar.jsx  SystemDashboard.jsx  VideoIntelligence.jsx  VideoPlayer.jsx
mcp-server/: README-API.md  README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: vygil-mcp-server.ts
mcp-server/src/types/: protocol.ts
